# cexi

./: .coveragerc  .gitignore  LICENSE  README.md  TODO.md  setup.cfg  setup.py  tox.ini
examples/basic/: README.md  main.py  setup.py
src/cexi/: __init__.py  __main__.py  binary.py  binding.py  cexi.py  code.py  constants.py  core.py  exceptions.py  extension.py  misc.py  proxy.py  statement.py  templates.py  typing.py  utils.py  wrap.py
tests/: test_basics.py  test_dynamic.py  test_inverse.py  test_pure_c.py  test_single.py
