[metadata]
name = cexi
version = 0.0.2
author = melvin kaye
author_email = one.two.four.cee.four.one.plus@gmail.com
description = Cee EXtensions Interpolation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/one-two-four-cee-four-one-plus/cexi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src